@@ -18,7 +18,6 @@ requires 'Catalyst::Plugin::Static::Simple';
 requires 'Catalyst::View::TT';
 requires 'Class::Accessor::Fast';
 requires 'Class::C3';
-requires 'IPC::Open3';
 requires 'Lingua::EN::Numbers';
 requires 'Locale::Country';
 requires 'Net::LDAP::Constant';
