@@ -8,6 +8,10 @@ This file documents the revision history for UFL::Phonebook.
         - Controller::Authentication: Rename configuration paramter
           for redirecting to private version from redirect_to to
           authenticated_uri
+        - ::LDAP::Connection: Rewrite to avoid issues with incorrect
+          file descriptors when running in FastCGI
+        - ::LDAP::Connection: Use the Kerberos credential cache
+          instead of a separate lock file to determine when to kinit
 
 0.20  Fri Aug 24 18:04:29 EDT 2007
         - Rename from Phonebook to UFL::Phonebook
